--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-datasource.url=jdbc:mysql://localhost:3306/ddd_pokemon
-datasource.username=root
-datasource.password=
-datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:orcl
+datasource.username=rm556448
+datasource.password=fiap24
+datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
